--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="./js/Ground.js"></script>
     <script src="./js/Plinko.js"></script>
     <script src="./js/Particle.js"></script>
+    <script src="./js/divisions.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 
